[package]
name = "php_deepface"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" produces a standard .dll file on Windows
crate-type = ["cdylib", "rlib"]

[dependencies]
ext-php-rs = "0.15"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "load-dynamic", "download-binaries", "copy-dylibs", "tls-native", "api-24"] }
image = "0.24"
ndarray = "0.17"
nalgebra = "0.32"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }
